Modify field alignment [Fixes #159498652]

--- a/main.css
+++ b/main.css
@@ -5,8 +5,9 @@ body {
 }
 
 label {
-    font-size: 15px;
-    font-weight: 600;
+    font-size: 13px;
+    font-weight: 200;
+    margin-bottom: 20px;
 }
 
 input {
@@ -14,35 +15,44 @@ input {
     display: block;
     padding: 15px;
     width: 100%;
-    height: 100%;
     margin-bottom: 20px;
+    font-size: 18px;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.d-flex > .select {
+    width: 20%;
+}
+
+.d-flex > .phone_num {
+    width: 80%;
 }
 
 .content {
-    /* padding: 40px; */
-    max-width: 600px;
+    max-width: 400px;
     margin: 0 auto;
-    /* border-radius: 10px; */
 }
 
 .logo {
     margin: 0 auto;
     background-color: black;
-    width: 90px;
+    width: 100px;
     height: 65px;
     text-align: center;
     color: #fff;
     font-weight: 900;
     padding-top: 35px;
     vertical-align: center;
-    font-size: 30px;
+    font-size: 23px;
 }
 
 h1 {
     text-align: center;
-    font-weight: 900;
-    /* margin: 0 0 40px; */
-    font-size: 40px;
+    font-weight: 200;
+    font-size: 35px;
 }
 
 h2 {
@@ -55,18 +65,15 @@ button {
     background-color: darkcyan;
     border: none;
     outline: none;
-    /* width: ; */
     padding: 20px;
     color: #fff;
-    width: 630px;
-    text-align: left;
+    width: 435px;
     font-size: 20px;
     font-weight: 800;
 }
 
 a {
     text-decoration: none;
-    /* display: block; */
 }
 
 p {
@@ -74,46 +81,38 @@ p {
 }
 
 .promo {
-    /* padding-top: 30px; */
     color: darkturquoise;
     font-size: 15px;
 }
 
 .wrap {
-    /* position:relative; */
     margin-bottom: 20px;
 }
 
 .container {
-    /* content: ""; */
-    display: table;
-    /* clear: both; */
+    display: flex;
 }
 
-.container:after {
-    display: table;
-}
-
-.container > div {
-    float: left;
-    width: 40%;
+.container > #first-name {
+    width: 50%;
     margin-right: 10%;
 }
 
-#last-name {
-    margin-right: 0 auto;
-} 
+.container > #last-name {
+    width: 50%;
+}
 
-/* .container > div:after {
-    padding-left: 30px;
-    margin-bottom: 4px;
-} */
+select {
+    padding: 18px;
+    background-color: #fff;
+    width: 100%;
+}
+
 @media only screen and (max-width: 700px) {
     h1 {
         text-align: center;
         font-weight: 900;
-        /* margin: 0 0 40px; */
-        font-size: 20px;
+        font-size: 25px;
     }
 
     h2 {
@@ -125,26 +124,24 @@ p {
     .logo {
         margin: 0 auto;
         background-color: black;
-        width: 60px;
-        height: 10px;
+        width: 100px;
+        height: 65px;
         text-align: center;
         color: #fff;
         font-weight: 900;
-        padding-bottom: 35px;
+        padding-top: 35px;
         vertical-align: center;
-        font-size: 20px;
+        font-size: 23px;
     }
 
     button {
         background-color: darkcyan;
         border: none;
         outline: none;
-        /* width: ; */
         padding: 20px;
         color: #fff;
-        max-width: 550px;
-        text-align: left;
-        font-size: 15px;
+        width: 570px;
+        font-size: 20px;
         font-weight: 800;
     }
 
@@ -154,29 +151,51 @@ p {
 
     label {
         font-size: 13px;
-        font-weight: 600;
-        /* padding-left: 30px; */
+        font-weight: 200;
+        margin-bottom: 20px;
+    }
+    
+    input {
+        margin: 0 auto;
+        display: block;
+        padding: 15px;
+        /* width: 500px; */
+        margin-bottom: 20px;
+        font-size: 18px;
     }
 
     .content {
-        /* padding: 40px; */
         max-width: 600px;
         margin: 0 auto;
-        /* border-radius: 10px; */
     }
 
-    .container > div {
-        float: left;
+    .container {
+        display: flex;
+    }
+    
+    .container > #first-name {
         width: 40%;
         margin-right: 10%;
     }
-
-    .wrap {
-        width: 500px;
+    
+    .container > #last-name {
+        width: 40%;
     }
 
-    #last-name {
-        margin-right: 5% auto;
+    .d-flex {
+        display: flex;
+    }
+    
+    .d-flex > .select {
+        width: 20%
+    }
+    
+    .d-flex > .phone_num {
+        width: 70%;
+    }
+
+    .wrap {
+        width: 540px;
     }
 }
 
@@ -185,11 +204,9 @@ p {
         background-color: darkcyan;
         border: none;
         outline: none;
-        /* width: ; */
         padding: 20px;
         color: #fff;
         max-width: 500px;;
-        text-align: left;
         font-size: 15px;
         font-weight: 800;
     }
@@ -197,7 +214,6 @@ p {
     label {
         font-size: 11px;
         font-weight: 600;
-        /* padding-left: 30px; */
     }
 
     .wrap {
@@ -210,11 +226,9 @@ p {
         background-color: darkcyan;
         border: none;
         outline: none;
-        /* width: ; */
         padding: 20px;
         color: #fff;
         width: 350px;;
-        text-align: left;
         font-size: 15px;
         font-weight: 800;
     }
@@ -222,7 +236,6 @@ p {
     label {
         font-size: 10px;
         font-weight: 600;
-        /* padding-left: 30px; */
     }
 
     .container > div {
